force-app/main/default/objects/FieloPLT__Rule__c/FieloPLT__Rule__c.object-meta.xml
<CustomObject>
    <description>Rules are a set of conditions which define when Members can obtain Rewards after completing the assigned Promotions.</description>
    <label>Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>