force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>An Action represents a behavior you want to encourage in a Member. It consists of an object (a Salesforce standard or a custom object) and a Member.</description>
    <inlineHelpText>Choose an Action. An Action represents a behavior you want to encourage in a Member. You can configure Actions in the Libraries tab.</inlineHelpText>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>