force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__ActionDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ActionDescription__c</fullName>
    <description>Action detailed description.</description>
    <inlineHelpText>Enter Action detailed description.</inlineHelpText>
    <label>Action Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>