force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__BadgeExpiration__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeExpiration__c</fullName>
    <description>If completed, it shows the number of days/months during which Badges are valid.</description>
    <inlineHelpText>Number of days/months during which Badges are valid.</inlineHelpText>
    <label>Badge Expiration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>