force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__BadgeExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeExpirationDate__c</fullName>
    <description>Exact date when Badges expire.</description>
    <inlineHelpText>Choose the exact date when Badges expire.</inlineHelpText>
    <label>Badge Expiration (Date)</label>
    <type>Date</type>
</CustomField>