force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__BadgeFieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeFieldName__c</fullName>
    <description>Badge lookup field API name of the processed object when is under &quot;Specified by Field&quot; mode.</description>
    <inlineHelpText>Choose the Badge lookup field API name of the processed object when is under &quot;Specified by Field&quot; mode.</inlineHelpText>
    <label>Badge Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>