force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__BadgeMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeMode__c</fullName>
    <description>Badge type: &quot;Fixed Value&quot; (e.g. specific number of Instant Badges chosen from the available Badges) or &quot;Specified by Field&quot; (e.g. Dynamic field in which Badges are given according to the chosen field).</description>
    <inlineHelpText>Choose a Badge type: &quot;Fixed Value&quot; (e.g. specific number of Instant Badges chosen from the available Badges) or &quot;Specified by Field&quot; (e.g. Dynamic field in which Badges are given according to the chosen field).</inlineHelpText>
    <label>Badge mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Specified by Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>