force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__BadgeReflection__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__BadgeReflection__c</fullName>
    <label>Custom Badge Expiration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>