force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Rule detailed description.</description>
    <inlineHelpText>Enter a description for this Rule.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>