force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__InstantBadge__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__InstantBadge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Badge chosen from &quot;Instant Badge&quot; when is under &quot;Fixed Value&quot; mode.</description>
    <inlineHelpText>Choose an &quot;Instant Badge&quot;.</inlineHelpText>
    <label>Instant Badge</label>
    <referenceTo>FieloPLT__Badge__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>