force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__InstantReward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__InstantReward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Instant Reward chosen from &quot;Rewards&quot; which are marked as Instant Rewards.</description>
    <inlineHelpText>Choose an Instant Reward from the &quot;Rewards&quot; which are marked as Instant Rewards.</inlineHelpText>
    <label>Instant Reward</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloPLT__Reward__c.FieloPLT__IsInstantReward__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <type>Lookup</type>
</CustomField>