force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__LogicalExpression__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__LogicalExpression__c</fullName>
    <description>Logical expressions which can be applied to Rule Criteria. The expressions available are: &quot;All&quot; (it meets all the established criteria); &quot;Any&quot; (it meets at least one established Criterion) and &quot;Custom&quot; (it enables creating a formula based on the established criteria. E.g. ((1 AND 2) OR 3).</description>
    <inlineHelpText>Logical expressions which can be applied to Rule Criteria: &quot;All&quot; (it meets all the established criteria); &quot;Any&quot; (it meets at least one Criterion) and &quot;Custom&quot; (it enables creating a formula based on the established criteria. E.g. ((1 AND 2) OR 3).</inlineHelpText>
    <label>Match Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>