force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__PointConversionMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointConversionMode__c</fullName>
    <description>It is the way in which Points can be converted into. The options include: &quot;Fixed Value&quot; (Fixed assigned number of Points), &quot;Factor&quot; (numerical field related to the &quot;Target Object&quot; that can be divided by a specific number) and &quot;Multiplier&quot; (numerical field related to the *Action* object that can be multiplied by a specific number).</description>
    <inlineHelpText>Choose how Points are calculated for this Rule: Fixed Value for a fixed number of Points, Factor for a numerical field that is divided by a specified value and Multiplier for a numerical field that is multiplied by a specified value</inlineHelpText>
    <label>Point Conversion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>