force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__PointExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointExpirationDate__c</fullName>
    <description>It enables to choose the exact date in which Points expire.</description>
    <inlineHelpText>Choose the exact date in which Points expire.</inlineHelpText>
    <label>Point Expiration (Date)</label>
    <type>Date</type>
</CustomField>