force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Promotion__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Promotion where the Rule belongs to.</description>
    <inlineHelpText>Choose the Promotion where the Rule belongs to.</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>FieloPLT__Promotion__c</referenceTo>
    <relationshipLabel>Rules</relationshipLabel>
    <relationshipName>Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>