force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__RecordFieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RecordFieldName__c</fullName>
    <description>A numeric field from the Action object which can be either divided (Factor) or multiplied (Multiplier).</description>
    <inlineHelpText>Choose the numerical field from the Action object to be divided (Factor) or multiplied (Multiplier)</inlineHelpText>
    <label>Point Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>