force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__RelatedList__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RelatedList__c</fullName>
    <description>It represents the behavior we want to encourage. It is a record which belongs to either a Salesforce standard or custom object set in the Action. You can choose the main object or any of its related lists for a whole master-detail process, that is, to process several records as a whole (e.g. Invoice&gt; Invoice Details).</description>
    <inlineHelpText>Choose the object from Action which represents the behavior you want to encourage. It can be the main object or any of its related lists for a whole master-detail process.</inlineHelpText>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>