force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__RewardFieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardFieldName__c</fullName>
    <description>Reward lookup field API name of the processed object when is under &quot;Specified by Field&quot; mode.</description>
    <inlineHelpText>Choose the Reward lookup field API name of the processed object when is under &quot;Specified by Field&quot; mode.</inlineHelpText>
    <label>Reward Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>