force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__RewardMode__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardMode__c</fullName>
    <description>Reward type: &quot;Fixed Value&quot; (e.g. fixed number of Points) or &quot;Specified by Field&quot; (e.g. Dynamic field in which Points are given according to the chosen field)</description>
    <inlineHelpText>Choose a Reward type: &quot;Fixed Value&quot; (e.g. fixed number of Points) or &quot;Specified by Field&quot; (e.g. Dynamic field in which Points are given according to the chosen field).</inlineHelpText>
    <label>Reward mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Specified by Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>