force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__StockControl__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__StockControl__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When ticked, &quot;Transaction&quot; is not processed if Reward is out of stock.</description>
    <inlineHelpText>When ticked, Transaction is not processed if Reward is out of stock.</inlineHelpText>
    <label>Stock Control</label>
    <type>Checkbox</type>
</CustomField>