force-app/main/default/objects/FieloPLT__Rule__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>It shows available Rule types: &quot;Best Option&quot; (Rules belonging to same Point Type compete against each other. Points are given only for the Rule that represents the best choice for Members) or &quot;No Competition&quot; (All Rules are applied. Points, Instant Rewards and/or Instant Badges are given for each Rule).</description>
    <inlineHelpText>Choose a Rule Type: Best Option (Points are awarded only if this Rule grants more than any other for a given Action and Point Type) or No Competition (This rule is always applied)</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best Option</fullName>
                <default>true</default>
                <label>Best Option</label>
            </value>
            <value>
                <fullName>No Competition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>