force-app/main/default/objects/FieloPLT__Rule__c/fields/V_BetcoinsCompConversionValue__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompConversionValue__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <label>Valor de Conversão - Betcoins Comp</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>