force-app/main/default/objects/FieloPLT__Rule__c/fields/V_BetcoinsCompExpirationMode__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompExpirationMode__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <label>Modo de Expiração Ponto - Betcoins Comp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Specific Date</fullName>
            </value>
            <value>
                <fullName>Recurrent Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>