force-app/main/default/objects/FieloPLT__Rule__c/fields/V_BetcoinsCompRuleChallenge__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsCompRuleChallenge__c</fullName>
    <description>Campo criado para atender o pré-requisito de tipos de ponto.</description>
    <label>Record Field Name - Betcoins Comp</label>
    <length>80</length>
    <type>Text</type>
</CustomField>