force-app/main/default/objects/FieloPLT__Rule__c/validationRules/FieloPLT__EmptyRuleName.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__EmptyRuleName</fullName>
    <active>true</active>
    <description>Rule name must be completed.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Rule name must be completed.</errorMessage>
</ValidationRule>